Update dark theme

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -1,4 +1,5 @@
 @use "sass:map";
+@use "sass:color";
 @use "theme.utils" as themeutils;
 
 $pallete: (
@@ -13,20 +14,21 @@ $pallete: (
   "primary-800": hsl(222, 45%, 20%),
   "primary-900": hsl(222, 45%, 10%),
   // Others
-  "background-body": hsl(220, 23%, 96%),
   "shadow-color": hsl(225, 25%, 30%),
   "white": #ffffff,
   "black": #000000,
   // Neutral
-  "neutral-100": hsl(240, 2%, 90%),
-  "neutral-200": hsl(240, 4%, 80%),
-  "neutral-300": hsl(240, 4%, 70%),
-  "neutral-400": hsl(240, 2%, 60%),
-  "neutral-500": hsl(240, 2%, 50%),
-  "neutral-600": hsl(240, 2%, 40%),
-  "neutral-700": hsl(240, 2%, 30%),
-  "neutral-800": hsl(240, 2%, 20%),
-  "neutral-900": hsl(240, 2%, 13%),
+  "neutral-50": hsl(0, 0, 95%),
+  "neutral-100": hsl(0, 0, 78%),
+  "neutral-200": hsl(0, 0, 66%),
+  "neutral-300": hsl(0, 0, 57%),
+  "neutral-400": hsl(0, 0, 45%),
+  "neutral-500": hsl(0, 0%, 38%),
+  "neutral-600": hsl(0, 0%, 32%),
+  "neutral-700": hsl(0, 0%, 24%),
+  "neutral-800": hsl(0, 0%, 18%),
+  "neutral-900": hsl(0, 0%, 14%),
+  "neutral-950": hsl(0, 0%, 5%),
   // Secondary
   "secondary-100": hsl(222, 65%, 90%),
   "secondary-200": hsl(222, 65%, 80%),
@@ -81,11 +83,11 @@ $pallete: (
 
 $themes: (
   "light": (
-    "background": map.get($pallete, "background-body"),
-    "on-background": map.get($pallete, "neutral-900"),
-    "background-level1": map.get($pallete, "neutral-100"),
-    "background-level2": map.get($pallete, "neutral-200"),
-    "background-level3": map.get($pallete, "neutral-300"),
+    "background": darken(map.get($pallete, "white"), 5%),
+    "on-background": map.get($pallete, "neutral-950"),
+    "background-level1": darken(map.get($pallete, "white"), 8%),
+    "background-level2": darken(map.get($pallete, "white"), 10%),
+    "background-level3": darken(map.get($pallete, "white"), 12%),
     "shadow-color": map.get($pallete, "shadow-color"),
     // Primary variant
     "primary": map.get($pallete, "primary-600"),
@@ -226,77 +228,151 @@ $themes: (
     "static-40": hsla(0, 0%, 0%, 0.4),
   ),
   "dark": (
-    "text": hsl(210, 11%, 93%),
-    "background": hsl(225, 25%, 3%),
-    "on-background": hsl(210, 11%, 93%),
-    "primary": hsl(222, 46%, 75%),
-    "on-primary": hsl(225, 25%, 3%),
-    "secondary": hsl(222, 65%, 31%),
-    "on-secondary": hsl(210, 11%, 93%),
-    "accent": hsl(223, 82%, 51%),
-    "text-50": hsl(200, 12%, 5%),
-    "text-100": hsl(216, 10%, 10%),
-    "text-200": hsl(210, 12%, 20%),
-    "text-300": hsl(212, 11%, 30%),
-    "text-400": hsl(210, 11%, 40%),
-    "text-500": hsl(211, 11%, 50%),
-    "text-600": hsl(210, 11%, 60%),
-    "text-700": hsl(208, 11%, 70%),
-    "text-800": hsl(210, 12%, 80%),
-    "text-900": hsl(204, 10%, 90%),
-    "text-950": hsl(220, 12%, 95%),
-    "background-50": hsl(230, 23%, 5%),
-    "background-100": hsl(226, 25%, 10%),
-    "background-200": hsl(224, 25%, 20%),
-    "background-300": hsl(225, 25%, 30%),
-    "background-400": hsl(226, 25%, 40%),
-    "background-500": hsl(225, 25%, 50%),
-    "background-600": hsl(226, 25%, 60%),
-    "background-700": hsl(225, 25%, 70%),
-    "background-800": hsl(224, 25%, 80%),
-    "background-900": hsl(226, 25%, 90%),
-    "background-950": hsl(220, 23%, 95%),
-    "primary-50": hsl(225, 46%, 5%),
-    "primary-100": hsl(222, 45%, 10%),
-    "primary-200": hsl(222, 45%, 20%),
-    "primary-300": hsl(222, 46%, 30%),
-    "primary-400": hsl(222, 46%, 40%),
-    "primary-500": hsl(222, 46%, 50%),
-    "primary-600": hsl(222, 46%, 60%),
-    "primary-700": hsl(222, 46%, 70%),
-    "primary-800": hsl(222, 45%, 80%),
-    "primary-900": hsl(222, 45%, 90%),
-    "primary-950": hsl(220, 46%, 95%),
-    "secondary-50": hsl(222, 68%, 5%),
-    "secondary-100": hsl(222, 65%, 10%),
-    "secondary-200": hsl(222, 65%, 20%),
-    "secondary-300": hsl(222, 65%, 30%),
-    "secondary-400": hsl(222, 65%, 40%),
-    "secondary-500": hsl(222, 65%, 50%),
-    "secondary-600": hsl(222, 65%, 60%),
-    "secondary-700": hsl(222, 65%, 70%),
-    "secondary-800": hsl(222, 65%, 80%),
-    "secondary-900": hsl(222, 65%, 90%),
-    "secondary-950": hsl(222, 68%, 95%),
-    "accent-50": hsl(223, 84%, 5%),
-    "accent-100": hsl(224, 80%, 10%),
-    "accent-200": hsl(223, 82%, 20%),
-    "accent-300": hsl(223, 82%, 30%),
-    "accent-400": hsl(223, 82%, 40%),
-    "accent-500": hsl(223, 82%, 50%),
-    "accent-600": hsl(223, 82%, 60%),
-    "accent-700": hsl(223, 82%, 70%),
-    "accent-800": hsl(223, 82%, 80%),
-    "accent-900": hsl(224, 80%, 90%),
-    "accent-950": hsl(223, 84%, 95%),
+    "background": color.scale(map.get($pallete, "black"), $lightness: 5%),
+    "on-background": map.get($pallete, "neutral-50"),
+    "background-level1": color.scale(map.get($pallete, "black"), $lightness: 8%),
+    "background-level2":
+      color.scale(map.get($pallete, "black"), $lightness: 10%),
+    "background-level3":
+      color.scale(map.get($pallete, "black"), $lightness: 12%),
+    "shadow-color": map.get($pallete, "shadow-color"),
+    // Primary variant
+    "primary": map.get($pallete, "primary-600"),
+    "on-primary": map.get($pallete, "white"),
+    "primary-hover-bg": map.get($pallete, "primary-500"),
+    "primary-hover-border": map.get($pallete, "primary-500"),
+    "primary-active-bg": map.get($pallete, "primary-400"),
+    "primary-active-border": map.get($pallete, "primary-400"),
+    "primary-on-active-bg": map.get($pallete, "neutral-100"),
+    "primary-disabled-bg": map.get($pallete, "neutral-800"),
+    "primary-on-disabled-bg": map.get($pallete, "neutral-300"),
+    // Primary light variant
+    "on-primary-light": map.get($pallete, "primary-200"),
+    "primary-light-hover-bg": map.get($pallete, "primary-700"),
+    "primary-light-hover-border": map.get($pallete, "primary-700"),
+    "primary-light-active-bg": map.get($pallete, "primary-600"),
+    "primary-light-active-border": map.get($pallete, "primary-600"),
+    "primary-light-on-active-bg": map.get($pallete, "neutral-300"),
+    "primary-light-disabled-bg": map.get($pallete, "neutral-900"),
+    "primary-light-on-disabled-bg": map.get($pallete, "neutral-300"),
+    // Secondary variant
+    "secondary": map.get($pallete, "secondary-600"),
+    "on-secondary": map.get($pallete, "white"),
+    "secondary-hover-bg": map.get($pallete, "secondary-500"),
+    "secondary-hover-border": map.get($pallete, "secondary-500"),
+    "secondary-active-bg": map.get($pallete, "secondary-400"),
+    "secondary-active-border": map.get($pallete, "secondary-400"),
+    "secondary-on-active-bg": map.get($pallete, "neutral-100"),
+    "secondary-disabled-bg": map.get($pallete, "neutral-800"),
+    "secondary-on-disabled-bg": map.get($pallete, "neutral-300"),
+    // Secondary light variant
+    "on-secondary-light": map.get($pallete, "secondary-200"),
+    "secondary-light-hover-bg": map.get($pallete, "secondary-700"),
+    "secondary-light-hover-border": map.get($pallete, "secondary-700"),
+    "secondary-light-active-bg": map.get($pallete, "secondary-600"),
+    "secondary-light-active-border": map.get($pallete, "secondary-600"),
+    "secondary-light-on-active-bg": map.get($pallete, "secondary-300"),
+    "secondary-light-disabled-bg": map.get($pallete, "neutral-900"),
+    "secondary-light-on-disabled-bg": map.get($pallete, "neutral-300"),
+    // Accent variant
+    "accent": map.get($pallete, "accent-600"),
+    "on-accent": map.get($pallete, "white"),
+    "accent-hover-bg": map.get($pallete, "accent-500"),
+    "accent-hover-border": map.get($pallete, "accent-500"),
+    "accent-active-bg": map.get($pallete, "accent-400"),
+    "accent-active-border": map.get($pallete, "accent-400"),
+    "accent-on-active-bg": map.get($pallete, "neutral-100"),
+    "accent-disabled-bg": map.get($pallete, "neutral-800"),
+    "accent-on-disabled-bg": map.get($pallete, "neutral-300"),
+    // Accent light variant
+    "on-accent-light": map.get($pallete, "accent-200"),
+    "accent-light-hover-bg": map.get($pallete, "accent-700"),
+    "accent-light-hover-border": map.get($pallete, "accent-700"),
+    "accent-light-active-bg": map.get($pallete, "accent-600"),
+    "accent-light-active-border": map.get($pallete, "accent-600"),
+    "accent-light-on-active-bg": map.get($pallete, "accent-300"),
+    "accent-light-disabled-bg": map.get($pallete, "neutral-900"),
+    "accent-light-on-disabled-bg": map.get($pallete, "neutral-300"),
+    // Danger variant
+    "danger": map.get($pallete, "danger-600"),
+    "on-danger": map.get($pallete, "white"),
+    "danger-hover-bg": map.get($pallete, "danger-500"),
+    "danger-hover-border": map.get($pallete, "danger-500"),
+    "danger-active-bg": map.get($pallete, "danger-400"),
+    "danger-active-border": map.get($pallete, "danger-400"),
+    "danger-on-active-bg": map.get($pallete, "neutral-100"),
+    "danger-disabled-bg": map.get($pallete, "neutral-800"),
+    "danger-on-disabled-bg": map.get($pallete, "neutral-300"),
+    // Danger light variant
+    "on-danger-light": map.get($pallete, "danger-200"),
+    "danger-light-hover-bg": map.get($pallete, "danger-700"),
+    "danger-light-hover-border": map.get($pallete, "danger-700"),
+    "danger-light-active-bg": map.get($pallete, "danger-800"),
+    "danger-light-active-border": map.get($pallete, "danger-800"),
+    "danger-light-on-active-bg": map.get($pallete, "danger-300"),
+    "danger-light-disabled-bg": map.get($pallete, "neutral-900"),
+    "danger-light-on-disabled-bg": map.get($pallete, "neutral-300"),
+    // Success variant
+    "success": map.get($pallete, "success-400"),
+    "on-success": map.get($pallete, "black"),
+    "success-hover-bg": map.get($pallete, "success-500"),
+    "success-hover-border": map.get($pallete, "success-500"),
+    "success-active-bg": map.get($pallete, "success-600"),
+    "success-active-border": map.get($pallete, "success-600"),
+    "success-on-active-bg": map.get($pallete, "neutral-950"),
+    "success-disabled-bg": map.get($pallete, "neutral-800"),
+    "success-on-disabled-bg": map.get($pallete, "neutral-300"),
+    // Success light variant
+    "on-success-light": map.get($pallete, "success-200"),
+    "success-light-hover-bg": map.get($pallete, "success-700"),
+    "success-light-hover-border": map.get($pallete, "success-700"),
+    "success-light-active-bg": map.get($pallete, "success-800"),
+    "success-light-active-border": map.get($pallete, "success-900"),
+    "success-light-on-active-bg": map.get($pallete, "success-300"),
+    "success-light-disabled-bg": map.get($pallete, "neutral-900"),
+    "success-light-on-disabled-bg": map.get($pallete, "neutral-300"),
+    // Warning variant
+    "warning": map.get($pallete, "warning-600"),
+    "on-warning": map.get($pallete, "black"),
+    "warning-hover-bg": map.get($pallete, "warning-500"),
+    "warning-hover-border": map.get($pallete, "warning-500"),
+    "warning-active-bg": map.get($pallete, "warning-400"),
+    "warning-active-border": map.get($pallete, "warning-400"),
+    "warning-on-active-bg": map.get($pallete, "neutral-100"),
+    "warning-disabled-bg": map.get($pallete, "neutral-800"),
+    "warning-on-disabled-bg": map.get($pallete, "neutral-300"),
+    // Warning light variant
+    "on-warning-light": map.get($pallete, "warning-800"),
+    "warning-light-hover-bg": map.get($pallete, "warning-200"),
+    "warning-light-hover-border": map.get($pallete, "warning-200"),
+    "warning-light-active-bg": map.get($pallete, "warning-300"),
+    "warning-light-active-border": map.get($pallete, "warning-300"),
+    "warning-light-on-active-bg": map.get($pallete, "warning-700"),
+    "warning-light-disabled-bg": map.get($pallete, "neutral-800"),
+    "warning-light-on-disabled-bg": map.get($pallete, "neutral-400"),
+    // Neutral variant
+    "neutral": map.get($pallete, "neutral-600"),
+    "on-neutral": map.get($pallete, "white"),
+    "neutral-hover-bg": map.get($pallete, "neutral-500"),
+    "neutral-hover-border": map.get($pallete, "neutral-500"),
+    "neutral-active-bg": map.get($pallete, "neutral-400"),
+    "neutral-active-border": map.get($pallete, "neutral-400"),
+    "neutral-on-active-bg": map.get($pallete, "neutral-100"),
+    "neutral-disabled-bg": map.get($pallete, "neutral-800"),
+    "neutral-on-disabled-bg": map.get($pallete, "neutral-300"),
+    // Neutral light variant
+    "on-neutral-light": map.get($pallete, "neutral-50"),
+    "neutral-light-hover-bg": map.get($pallete, "neutral-700"),
+    "neutral-light-hover-border": map.get($pallete, "neutral-700"),
+    "neutral-light-active-bg": map.get($pallete, "neutral-600"),
+    "neutral-light-active-border": map.get($pallete, "neutral-600"),
+    "neutral-light-on-active-bg": map.get($pallete, "neutral-200"),
+    "neutral-light-disabled-bg": map.get($pallete, "neutral-800"),
+    "neutral-light-on-disabled-bg": map.get($pallete, "neutral-400"),
+    // Static
     "static-5": hsla(0, 0%, 100%, 0.05),
     "static-10": hsla(0, 0%, 100%, 0.1),
     "static-40": hsla(0, 0%, 100%, 0.4),
-    "danger": hsl(0, 80%, 40%),
-    "danger-500": hsl(0, 80%, 50%),
-    "success": hsl(120, 75%, 50%),
-    "success-500": hsl(120, 75%, 50%),
-    "disabled": hsla(0, 0%, 0%, 0.05),
   ),
 );
 
