Remove supabase and update nextjs

--- a/app/[lang]/styles.module.scss
+++ b/app/[lang]/styles.module.scss
@@ -10,3 +10,9 @@
   margin-top: theme.spacing(2);
   width: 100%;
 }
+
+.loading-container {
+  padding: theme.spacing(1);
+  display: flex;
+  justify-content: center;
+}
