--- a/src/components/avatar/styles.module.scss
+++ b/src/components/avatar/styles.module.scss
@@ -2,9 +2,24 @@
 
 .avatar {
   border-radius: 50%;
-  padding: theme.spacing(2);
   background-color: var(--primary);
   color: var(--on-primary);
   width: fit-content;
   height: fit-content;
+}
+
+.size-sm {
+  padding: theme.spacing(1.2);
+}
+
+.size-md {
+  padding: theme.spacing(1.6);
+}
+
+.size-lg {
+  padding: theme.spacing(2);
+}
+
+.size-xl {
+  padding: theme.spacing(2.4);
 }
