--- a/src/features/page/commonAreas/components/commonAreaItem/styles.module.scss
+++ b/src/features/page/commonAreas/components/commonAreaItem/styles.module.scss
@@ -36,3 +36,19 @@
   justify-content: flex-end;
   margin-top: auto;
 }
+
+.placeholder {
+  border-radius: var(--radius);
+  width: 112px;
+  height: 132px;
+  background-color: var(--neutral);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  p {
+    text-align: center;
+    color: var(--on-neutral);
+  }
+}
