--- a/src/components/snackbar/styles.module.scss
+++ b/src/components/snackbar/styles.module.scss
@@ -22,13 +22,19 @@ $anim-timing-function: ease-in-out;
 }
 
 .position-top {
-  top: calc(55px + theme.spacing(2));
+  top: calc(var(--header-height) + theme.spacing(2));
   right: theme.spacing(2);
   left: theme.spacing(2);
 }
 
 .position-bottom {
   bottom: theme.spacing(2);
+  right: theme.spacing(2);
+  left: theme.spacing(2);
+}
+
+.position-bottom-elevated {
+  bottom: calc(var(--bottom-nav-height) + theme.spacing(2));
   right: theme.spacing(2);
   left: theme.spacing(2);
 }
